<resources>
    <string name="app_name">Chat App</string>
    <string name="edit_message">Write your message…</string>
    <string name="button_send">Send</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Create an account</string>

    <!-- Navigation Drawer Items -->
    <string name="nav_item_conversation_list">Conversations</string>
    <string name="nav_item_users">People</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Log Out</string>
    <string name="nav_item_about">About</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>My Conversations</item>
        <item>People</item>
        <item>Settings</item>
    </string-array>

    <!-- Menus -->
    <string name="menu_new_convo">New Conversation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be at least %d characters in length</string>
    <string name="error_incorrect_password">This email and password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="error_confirm_password">Confirm pssword must match password.</string>
    <string name="error_email_exists">This email is already registered.</string>
    <string name="error_register_failed">Unable to create account.</string>

    <!-- New conversation view strings -->
    <string name="title_activity_new_conversation">New Conversation</string>
    <string name="new_convo_name_hint">Conversation Name</string>
    <string name="new_convo_create">Create Conversation</string>

    <string name="conversation_no_messages">Send a message to start the conversation!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="dialog_delete_conversation_title">Delete conversation</string>
    <string name="dialog_delete_conversation_message">Do you really want to delete %s?</string>
    <string name="dialog_delete_conversation_ok">Yes</string>
    <string name="dialog_delete_conversation_cancel">Cancel</string>

</resources>
