<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_conversation_list"
            android:icon="@drawable/ic_message_black"
            android:title="@string/nav_item_conversation_list" />
        <item
            android:id="@+id/nav_item_users"
            android:icon="@drawable/ic_people_black"
            android:title="@string/nav_item_users" />
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_logout_black"
            android:title="@string/nav_item_logout" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_item_about"
                android:icon="@drawable/ic_info_black"
                android:title="@string/nav_item_about" />
        </menu>
    </item>

</menu>
